Hopefully fix problem with LaTeX DeclareMathOperator and Github viewer.

--- a/notebooks/cartpole_exercise.ipynb
+++ b/notebooks/cartpole_exercise.ipynb
@@ -197,22 +197,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\DeclareMathOperator{\\pt}{\\pi_\\theta}\n",
-    "\\DeclareMathOperator{\\E}{\\mathbb{E}}\n",
-    "\\DeclareMathOperator{\\calA}{\\mathcal{A}}\n",
-    "\\DeclareMathOperator{\\calS}{\\mathcal{S}}\n",
-    "$$\n",
     "### Policy\n",
     "\n",
     "We're trying to maximize objective function\n",
     "$$\n",
-    "J(\\theta)=\\E_{\\pt}[Q^{\\pt}(s, a)]\n",
-    "=\\sum_{s \\in \\calS }{d(s)}\\sum_{a \\in \\calA }{ \\pt(s, a) Q^{\\pt}(s, a)}\n",
+    "J(\\theta)=\\mathbb{E}_{\\pi_\\theta}[Q^{\\pi_\\theta}(s, a)] =\n",
+    "\\sum_{s \\in \\mathcal{S} }{d(s)}\\sum_{a \\in \\mathcal{A} }{ \\pi_\\theta(s, a) Q^{\\pi_\\theta}(s, a)}\n",
     "$$\n",
     "According to Policy Gradient Theorem\n",
     "$$\n",
-    "\\nabla_\\theta{J(\\theta)} = \\E_{\\pt}[\\nabla_\\theta\\log\\pt(s, a)Q^{\\pt}(s,a)]\n",
+    "\\nabla_\\theta{J(\\theta)} = \n",
+    "\\mathbb{E}_{\\pi_\\theta}[\\nabla_\\theta\\log\\pi_\\theta(s, a)Q^{\\pi_\\theta}(s,a)]\n",
     "$$\n",
     "\n",
     "Let's introduce abstract class `Policy` that represents function $\\pi_\\theta(s, a)$ parameterized by $\\theta$, where:\n",
@@ -246,10 +241,10 @@
    "source": [
     "### Monte-Carlo policy gradient\n",
     "\n",
-    "Using $G_t$ as unbiased sample of $Q^{\\pt}(s_t, a_t)$, and learning rate $\\alpha$\n",
+    "Using $G_t$ as unbiased sample of $Q^{\\pi_\\theta}(s_t, a_t)$, and learning rate $\\alpha$\n",
     "\n",
     "$$\n",
-    "\\Delta\\theta = \\alpha \\nabla_\\theta\\log\\pt(s, a) G_t\n",
+    "\\Delta\\theta = \\alpha \\nabla_\\theta\\log\\pi_\\theta(s, a) G_t\n",
     "$$"
    ]
   },
@@ -313,13 +308,14 @@
     "David's lecture uses softmax as an example. Probabilities of actions are computed as a softmax of weights, where weight is linear combination of stat-action features and policy parameters.\n",
     "\n",
     "$$\n",
-    "\\pt(s, a_i) = \\frac {exp(\\phi(s, a_i)^\\top \\theta)} {\\sum_{a \\in \\calA }{exp(\\phi(s, a)^\\top \\theta)}}\n",
+    "\\pi_\\theta(s, a_i) = \n",
+    "\\frac {exp(\\phi(s, a_i)^\\top \\theta)} {\\sum_{a \\in \\mathcal{A} }{exp(\\phi(s, a)^\\top \\theta)}}\n",
     "$$\n",
     "\n",
     "The score function is\n",
     "\n",
     "$$\n",
-    "\\nabla_\\theta\\log\\pt(s, a) = \\phi(s, a) - \\E_{\\pt}[\\phi(s, \\cdot)]\n",
+    "\\nabla_\\theta\\log\\pi_\\theta(s, a) = \\phi(s, a) - \\mathbb{E}_{\\pi_\\theta}[\\phi(s, \\cdot)]\n",
     "$$\n",
     "\n",
     "#### Choosing features represenation of state and action."
@@ -340,10 +336,11 @@
     "only action specific parameters ($\\theta_5, \\theta_6$) were updated. The policy was \"blind\" to the environment. The reason of such behavior is pretty simple:\n",
     "\n",
     "$$\n",
-    "\\nabla_\\theta\\log\\pt(s, a) = \\phi(s, a) - \\E_{\\pt}[\\phi(s, \\cdot)] = \\\\\n",
+    "\\nabla_\\theta\\log\\pi_\\theta(s, a) = \n",
+    "\\phi(s, a) - \\mathbb{E}_{\\pi_\\theta}[\\phi(s, \\cdot)] = \\\\\n",
     "\\langle s_1, s_2, s_3, s_4, \\delta_{0a}, \\delta_{1a} \\rangle -\n",
-    "\\langle s_1, s_2, s_3, s_4, \\pt(s, 0), \\pt(s, 1) \\rangle = \\\\\n",
-    "\\langle 0, 0, 0, 0, \\delta_{0a} - \\pt(s, 0), \\delta_{1a} - \\pt(s, 1) \\rangle\n",
+    "\\langle s_1, s_2, s_3, s_4, \\pi_\\theta(s, 0), \\pi_\\theta(s, 1) \\rangle = \\\\\n",
+    "\\langle 0, 0, 0, 0, \\delta_{0a} - \\pi_\\theta(s, 0), \\delta_{1a} - \\pi_\\theta(s, 1) \\rangle\n",
     "$$"
    ]
   },
@@ -368,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [00:42<00:00, 46.82it/s]\n"
+      "100%|██████████| 2000/2000 [00:50<00:00, 39.87it/s]\n"
      ]
     },
     {
@@ -416,8 +413,8 @@
     "Essentially Cartpole policy represents probability of two disjoint outcomes: \"apply force -1, otherwise apply force +1\". Therefore it can be represented as $B(s)$ where\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\pt(s, 0)=B(s) \\\\\n",
-    "\\pt(s, 1)=1-B(s)\n",
+    "\\pi_\\theta(s, 0)=B(s) \\\\\n",
+    "\\pi_\\theta(s, 1)=1-B(s)\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
@@ -425,25 +422,28 @@
     "Let's try to solve it using sigmoid of linear combination of parameters and state only.\n",
     "\n",
     "$$\n",
-    "\\pt(s, a) =\n",
+    "\\pi_\\theta(s, a) =\n",
     "\\begin{cases}\n",
-    "\\ \\frac {exp(s^\\top \\theta)} {1 + exp(s^\\top \\theta)} \\text{ if } a=0,  \\\\\n",
-    "\\ 1 - \\pt(s, 0) \\text{ if } a=1.\n",
+    "\\ \\frac {e^{s^\\top \\theta}} {1 + e^{s^\\top \\theta}} \\text{ if } a=0,  \\\\\n",
+    "\\ 1 - \\pi_\\theta(s, 0) \\text{ if } a=1.\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
     "It got prety nice score functuion:\n",
     "\n",
     "$$\n",
-    "\\nabla_\\theta\\log\\pt(s,0) = \\nabla_\\theta \\log\\frac {e^{s^\\top \\theta}} {1 + e^{s^\\top\\theta}} = \\\\\n",
+    "\\nabla_\\theta\\log\\pi_\\theta(s,0) = \n",
+    "\\nabla_\\theta \\log\\frac {e^{s^\\top \\theta}} {1 + e^{s^\\top\\theta}} = \\\\\n",
     "\\nabla_\\theta(s^\\top\\theta - \\log(1 + e^{s^\\top\\theta})) =\n",
     "s - \\frac {\\nabla_\\theta(1 + e^{s^\\top\\theta})} {1 + e^{s^\\top\\theta}} = \\\\\n",
-    "s - s \\frac {e^{s^\\top\\theta}} {1 + e^{s^\\top\\theta}} = s(1 - \\pt(s, 0)) = s\\pt(s, 1)\n",
+    "s - s \\frac {e^{s^\\top\\theta}} {1 + e^{s^\\top\\theta}} = \n",
+    "s(1 - \\pi_\\theta(s, 0)) = s\\pi_\\theta(s, 1)\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\nabla_\\theta\\log\\pt(s,1) = \\nabla_\\theta\\log\\frac {1} {1 + e^{s^\\top\\theta}} =\n",
-    "-\\nabla_\\theta\\log(1 + e^{s^\\top\\theta})=-s\\pt(s,0)\n",
+    "\\nabla_\\theta\\log\\pi_\\theta(s,1) = \n",
+    "\\nabla_\\theta\\log\\frac {1} {1 + e^{s^\\top\\theta}} =\n",
+    "-\\nabla_\\theta\\log(1 + e^{s^\\top\\theta})=-s\\pi_\\theta(s,0)\n",
     "$$\n",
     "Hope I got it right.\n"
    ]
@@ -457,7 +457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [00:23<00:00, 85.65it/s] \n"
+      "100%|██████████| 2000/2000 [00:25<00:00, 78.31it/s]\n"
      ]
     },
     {
